@@ -62,7 +62,6 @@
 #include "scip/cons_soc.h"
 #include "scip/cons_varbound.h"
 #include "scip/cons_xor.h"
-#include "scip/dialog_default.h"
 #include "scip/disp_default.h"
 #include "scip/heur_actconsdiving.h"
 #include "scip/heur_clique.h"
